cmake_minimum_required(VERSION 2.8)
project(520370910042)
#set(CMAKE_CXX_STANDARD 17)
#set(CMAKE_C_FLAGS "-O2 -Werror -Wall -Wextra -Wconversion -Wvla -Wpedantic -std=c11")
#INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
#target_include_directories(520370910042 PUBLIC "${PROJECT_BINARY_DIR}")
add_executable(520370910042 p2_main.c)
